importType() and exportType()

--- a/test/typescript-generator/todo.txt
+++ b/test/typescript-generator/todo.txt
@@ -1,11 +1,10 @@
-- use json-pointer package
 - exportType()
 - importType()
+- name collisions between imports and exports
 - import { exportName as localName }
 - implement Specification.loadFile() 
 - repository.writeFiles()
 - CLI
 - create all of the coders
-
 
 
