update todo list

--- a/test/typescript-generator/todo.txt
+++ b/test/typescript-generator/todo.txt
@@ -1,8 +1,16 @@
+Do these first
+- refactor Coder / Script so Coder has a name() generator
+- refactor Script#import() and Coder so that we don't have to pass the path in to import()
+- refactor so that a script has a requirement and coder for each export, a coder does not have a requirement
+- document the architecture
+
+The rest can become Github issues
+
 - name collisions between imports and exports
 - import { exportName as localName }
-- repository.writeFiles()
-- format with Prettier
 - CLI
-- create all of the coders
+- convert to monorepo
+- unit tests
+- fix generated code so that it passes ESLint
 
 
