Document the architecture at a high level

--- a/test/typescript-generator/todo.txt
+++ b/test/typescript-generator/todo.txt
@@ -1,9 +1,6 @@
-Do these first
-- refactor so that a script has a requirement and coder for each export, a coder does not have a requirement
-- document the architecture
-
 The rest can become Github issues
 
+- convert to TypeScript 
 - name collisions between imports and exports
 - import { exportName as localName }
 - CLI
@@ -11,5 +8,8 @@ The rest can become Github issues
 - unit tests
 - fix generated code so that it passes ESLint
 - consistently import node:path as nodePath 
+- refactor ugly stuff like `this.requirement.url.split("/").at(-1)`
+- make sure it works if the spec is in multiple files
+
 
 
